Добавлено удаление пользователя
